--- a/index.html
+++ b/index.html
@@ -119,7 +119,9 @@ If youâ€™re using two memory sticks, install them in slots 1 and 3 or 2 and 4 â€
 
 
 <div id="copyright" class="container">
-	<p>&copy; Abdulrahman Althomali | Ragheed Al-jehani.</p>
+	<p>
+		&copy; UNTITLED. ALL RIGHTS RESERVED. |  DESIGN BY 33720883@stu.rcyci.edu.sa & 3910628@stu.rcyci.edu.sa.
+	</p>
 </div>
 	
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js" integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf" crossorigin="anonymous"></script>
